[project]
name = "my-network-lib"
version = "0.1.0"
description = "Reusable Pulumi VPC components"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# This ensures uv/pip finds your code in the src directory
[tool.hatch.build.targets.wheel]
packages = ["src/my_network_lib"]